# Stratosphere

./: CMakeLists.txt
Engine/include/ECS/: ArchetypeStore.h  Components.h  ECSContext.h  Prefab.h  PrefabSpawner.h
Engine/include/ECS/systems/: CommandSystem.h  LocalAvoidanceSystem.h  PoseUpdateSystem.h  RenderSystem.h  RenderTransformUpdateSystem.h  SteeringSystem.h
Engine/include/Engine/: Renderer.h  SModelRenderPassModule.h
Engine/shaders/: mesh.frag.spv  mesh.vert.spv  smodel.frag.spv  smodel.vert.spv  triangle.vert.spv
Engine/src/: AssetManager.cpp  MeshRenderPassModule.cpp  PerformanceMonitor.cpp  Renderer.cpp  SModelRenderPassModule.cpp  SwapChain.cpp  VulkanContext.cpp
Sample/: BattleConfig.json  Scinerio.json  update.h
Sample/entities/: CombatKnight.json  HeavyInfantry.json  LightInfantry.json  TreeStumpWall.json
Sample/src/: MySampleApp.cpp  ScenarioSpawner.cpp  VerifyLoadSModel.cpp  main.cpp  update.cpp
Sample/systems/: CombatSystem.h  LocomotionAnimationControllerSystem.h
Sample/utils/: CombatSystemImpl.inl  CombatSystemImpl_charge.inl  CombatSystemImpl_core.inl  CombatSystemImpl_stats.inl  CombatSystemImpl_update.inl
